--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -659,7 +659,7 @@ Slides
 <p>Ressource = <a href="https://api.domain.com/v2/">https://api.domain.com/v2/</a> <strong>items/5</strong></p>
 <p>Représentation</p>
 <pre><code class="lang-json">{
-  "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+  "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
   "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
   "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
   "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span>
@@ -868,7 +868,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
   <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h3 id="pas-d-enveloppe">Pas d&#39;enveloppe</h3>
 <pre><code class="lang-json">{
-  "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+  "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
   "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
   "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
   "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span>
@@ -876,7 +876,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 <p>Plutôt que</p>
 <pre><code class="lang-json">{
   "<span class="attribute">data</span>": <span class="value">{
-    "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+    "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
     "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
     "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
     "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span>
@@ -887,21 +887,21 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
   <div class="slide hidden" id="slide-16">
     <section class="slide-content"><h3 id="imbrication">Imbrication</h3>
 <pre><code class="lang-json">{
-  "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+  "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
   "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
   "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
   "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span></span>,
   "<span class="attribute">country</span>": <span class="value">{
-    "<span class="attribute">id</span>": <span class="value"><span class="number">569</span>
+    "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655898965"</span>
   }</span>
 }</span></code></pre>
 <p>Plutôt que</p>
 <pre><code class="lang-json">{
-  "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+  "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
   "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
   "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
   "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span></span>,
-  "<span class="attribute">country_id</span>": <span class="value"><span class="number">569</span>
+  "<span class="attribute">country_id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655898965"</span>
 }</span></code></pre>
 </section>
   </div>
@@ -909,12 +909,12 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
     <section class="slide-content"><h3 id="imbrication">Imbrication</h3>
 <pre><code class="lang-http"><span class="attribute">X-Resource-Nested</span>: <span class="string">true</span></code></pre>
 <pre><code class="lang-json">{
-  "<span class="attribute">id</span>": <span class="value"><span class="number">7856</span></span>,
+  "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655897563"</span></span>,
   "<span class="attribute">name</span>": <span class="value"><span class="string">"Jo"</span></span>,
   "<span class="attribute">age</span>": <span class="value"><span class="number">18</span></span>,
   "<span class="attribute">isGeek</span>": <span class="value"><span class="literal">true</span></span>,
   "<span class="attribute">country</span>": <span class="value">{
-    "<span class="attribute">id</span>": <span class="value"><span class="number">569</span></span>,
+    "<span class="attribute">id</span>": <span class="value"><span class="string">"110e8400-e29b-11d4-a716-446655898965"</span></span>,
     "<span class="attribute">name</span>": <span class="value"><span class="string">"France"</span></span>,
     "<span class="attribute">codeISO</span>": <span class="value"><span class="string">"FR"</span>
   }</span>
@@ -935,7 +935,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
     -d <span class="string">'{"name": "Jo", "age": 18, "isGeek": true}'</span>
 
 {
-  <span class="string">"id"</span>: 7856,
+  <span class="string">"id"</span>: <span class="string">"110e8400-e29b-11d4-a716-446655897563"</span>,
   <span class="string">"name"</span>: <span class="string">"Jo"</span>,
   <span class="string">"age"</span>: 18,
   <span class="string">"isGeek"</span>: <span class="literal">true</span>
@@ -993,6 +993,9 @@ X-Request-UUID: 454684315618613
 X-Rate-Limit-Limit: 10000
 X-Rate-Limit-Remaining: 8532
 X-Rate-Limit-Reset: 1200</code></pre>
+<blockquote>
+<p>X-Request-UUID: utiliser la version 1 de la RFC 4122 car elle est time-based et donc indexable séquentiellement</p>
+</blockquote>
 </section>
   </div>
   <div class="slide hidden" id="slide-24">
