--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -570,16 +570,28 @@ table {
 			margin-bottom: 0; 
 		}
 
+a {
+	color: #47a9ff;
+}
+a:hover {
+	color: #47a9ff;
+	border-bottom: 3px solid #47a9ff;
+}
+
 pre {
 	font-size: 0.7em;
 }
 
 .author h1 {
-	font-size: 1em;
+	font-size: 1.5em;
+	font-weight: bold;
+	font-family: 'Helvetica Neue', Helvetica;
 }
 
 .author h3 {
-	font-size: 0.7em;
+	font-size: 1em;
+	font-family: 'Helvetica Neue', Helvetica;
+	margin-bottom:0;
 }
 
 /*
@@ -628,6 +640,11 @@ Slides
 
 #slide-36 pre {
 	font-size: 0.6em;
+}
+
+
+#slide-39 p {
+	text-align: center;
 }
 
   </style>
@@ -1289,10 +1306,20 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </section>
   </div>
   <div class="slide hidden  " id="slide-39">
-    <section class="slide-content"><h1 id="questions-">Questions?</h1>
+    <section class="slide-content"><h1 id="merci">Merci</h1>
+<p><br/>
+<a href="https://twitter.com/mbagur">@mbagur</a>
+<br/>
+<a href="https://twitter.com/mbagur">@ynohat</a>
+<br/>
+<a href="https://twitter.com/mbagur">@mikael_letang</a></p>
 </section>
   </div>
   <div class="slide hidden" id="slide-40">
+    <section class="slide-content"><h1 id="questions-">Questions?</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-41">
     <section class="slide-content"><div class="author">
   <h1 class="name">Fabien Furet</h1>
     <h3 class="twitter">
