--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -938,7 +938,7 @@ Donc <code>Accept: application/json; application/xml</code> mais on garde JSON e
 </blockquote>
 <ul>
 <li>JSON pretty print</li>
-<li>Les ids des représentations sont des UUID</li>
+<li>Les ids des représentations sont des UUID: <code>110e8400-e29b-11d4-a716-446655897563</code></li>
 </ul>
 </section>
   </div>
@@ -1065,7 +1065,7 @@ Obligera côter serveur à typer les valeurs manuellement et on n&#39;aura pas d
 Content-Encoding:gzip
 Content-Length:126444
 Last-Modified: Wed, 08 Jul 2015 12:59:49 GMT
-X-Request-UUID: 454684315618613
+X-Request-UUID: 110e8400-e29b-11d4-a716-446655897563
 X-Rate-Limit-Limit: 10000
 X-Rate-Limit-Remaining: 8532
 X-Rate-Limit-Reset: 1200</code></pre>
@@ -1214,8 +1214,7 @@ X-Rate-Limit-Reset: 1200</code></pre>
   </div>
   <div class="slide hidden" id="slide-29">
     <section class="slide-content"><h3 id="pagination-requ-te">Pagination: requête</h3>
-<pre><code class="lang-bash">$ curl -X POST https://api.domain.com/v2/items?page=2&amp;per_page=100 \
-    -H <span class="string">"Content-Type: application/json"</span>
+<pre><code class="lang-bash">$ curl -X GET https://api.domain.com/v2/items?page=2&amp;per_page=100 \
     -H <span class="string">"Accept: application/json"</span> \
     -H <span class="string">"Accept-Encoding: gzip"</span> \
     -H <span class="string">"If-Modified-Since: Fri, 31 Jul 2015 20:41:30 GMT"</span></code></pre>
@@ -1250,7 +1249,6 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
     <section class="slide-content"><h3 id="filtering-sort-search">Filtering, sort &amp; search</h3>
 <pre><code class="lang-bash">$ curl -X GET https://api.domain.com/v2/items?q=toto&amp;isGeek=<span class="literal">false</span>
 &amp;age=18,19&amp;sort=name,id \
-    -H <span class="string">"Content-Type: application/json"</span>
     -H <span class="string">"Accept: application/json"</span> \
     -H <span class="string">"Accept-Encoding: gzip"</span> \
     -H <span class="string">"If-Modified-Since: Fri, 31 Jul 2015 20:41:30 GMT"</span></code></pre>
@@ -1313,7 +1311,6 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </ul>
 <pre><code class="lang-bash">$ curl -X OPTIONS https://api.domain.com/v2/items?q=toto&amp;isGeek=false
 &amp;age=18,19&amp;sort=name,id \
-    -H "Content-Type: application/json" \
     -H "Accept: application/json" \
     -H "Accept-Encoding: gzip" \
     -H "If-Modified-Since: Fri, 31 Jul 2015 20:41:30 GMT" \
