--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -1341,7 +1341,7 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
     <section class="slide-content"><h3 id="aller-plus-loin">Aller plus loin</h3>
 <p>Authentification</p>
 <p>Test: Codeception, behat-rest-testing, CasperJS...</p>
-<p>Spécification: json:api, JSON Schema...</p>
+<p>Spécification: Swagger, RAML, json:api, JSON Schema...</p>
 <p><strong>RAML</strong> (RESTful API Modeling Language)</p>
 <ul>
 <li>Spécification</li>
