--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			}
 
 			.links {
-				margin-top: 80px;
+				margin-top: 60px;
 				font-size: 0.8em;
 			}
 
@@ -102,13 +102,11 @@
 			<br/>
 			<h2>Talk</h2>
 			<p>
-				<strong>REST in peace</strong><br/>
-				Bonnes pratiques pour construire une API "REST" pragmatique et efficace en 2015.<br/>
-				Les slides sont disponible <a href="http://fabienfuret.net/talk/REST-in-peace">içi</a>.
+				<strong>REST in peace</strong> (<a href="http://fabienfuret.net/talk/REST-in-peace">slides</a>)<br/>
+				Bonnes pratiques pour construire une API "REST" pragmatique et efficace en 2015.
 				<br/><br/>
-				<strong>Standing desk WTF?</strong><br/>
-				Lighting talk sur mon retour d'expérience après 3 mois de standing desk.<br/>
-				Les slides sont disponible <a href="http://fabienfuret.net/talk/Standing-desk-WTF/">içi</a>.
+				<strong>Standing desk WTF?</strong> (<a href="http://fabienfuret.net/talk/Standing-desk-WTF">slides</a>)<br/>
+				Lighting talk sur mon retour d'expérience après 3 mois de standing desk.
 			</p>
 			<p class="links">
 				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twitter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a> - <a href="http://blogmarks.net/user/RETFU">Blogmarks</a>
