feat: first iteration on the talk "Recruter vos développeurs en 2018"

--- a/talk/Recruter-vos-developpeurs/index.html
+++ b/talk/Recruter-vos-developpeurs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Recruter vos developpeurs</title>
+  <title>Recruter vos developpeurs en 2018</title>
   <style type="text/css">
     /* Color Palette Based on Monokai
 
@@ -766,28 +766,245 @@ Slides
   </div>
 
   <div class="slide" id="slide-1">
-    <section class="slide-content"><h1 id="recruter-vos-developpeurs">Recruter vos developpeurs</h1>
+    <section class="slide-content"><h1 id="recruter-vos-developpeurs-en-2018">Recruter vos developpeurs en 2018</h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
-    <section class="slide-content"><h3 id="todo">TODO</h3>
+    <section class="slide-content"><h3 id="contexte-iwd">Contexte IWD</h3>
 <ul>
-<li>XXX</li>
-<li>YYY</li>
+<li>SaaS dans le merchandising/marketing, grand compte</li>
+<li>~70 collaborateurs dont ~16 geek dans l&#39;équipe dev</li>
+<li>Paris, New York, Singapore, Los Angeles, Bordeaux, Caen et Lyon</li>
+<li>Forte volonté d&#39;augmenter les effectifs et particulièrement dans mon équipe</li>
+<li>Difficulté à attirer des talents</li>
 </ul>
 </section>
   </div>
   <div class="slide hidden" id="slide-3">
-    <section class="slide-content"><h1 id="merci">Merci</h1>
-<p><br/>
-Relecture, critiques, pull requests ;-)<br><a href="https://twitter.com/mbagur">@mbagur</a><br><a href="https://twitter.com/mikael_letang">@mikael_letang</a></p>
+    <section class="slide-content"><h3 id="objectifs">Objectifs</h3>
+<ul>
+<li>Pouvoir interragir avec plus de candidats</li>
+<li>Etre autonome (ne pas dépendre d&#39;un cabinet ou de RH)</li>
+<li>Pouvoir déleguer à n&#39;importe quelles étapes du processus</li>
+<li>Ne pas être dépendant de moi</li>
+<li>Travailler/communiquer notre &quot;image employeur&quot;</li>
+</ul>
 </section>
   </div>
   <div class="slide hidden" id="slide-4">
+    <section class="slide-content"><h3 id="processus">Processus</h3>
+<ul>
+<li>Annonce</li>
+<li>Sourcing</li>
+<li>Premier contact par email</li>
+<li>Vidéo conférence (~20min)</li>
+<li>Challenge technique chez soi, sans limite de temps</li>
+<li>Rencontre dans les bureaux de Paris (~1h)</li>
+<li>Proposition</li>
+<li>Onboarding</li>
+<li>Fidélisation 😀</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-5">
+    <section class="slide-content"><h3 id="annonce-1-2">Annonce 1/2</h3>
+<ul>
+<li>Les <strong>valeurs</strong> de la société doivent transpirer</li>
+<li>Etre <strong>honnête</strong>, ne pas cacher du legacy par exemple 😅</li>
+<li>Donner un maximum de détails sur le <strong>contexte</strong> du job</li>
+<li>Ne pas tutoyer</li>
+<li>Ne pas rédiger en mode kikool startup franglais t&#39;as vu</li>
+<li>Donner le <strong>SALAIRE 🙏</strong> ou une fourchette</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-6">
+    <section class="slide-content"><h3 id="annonce-2-2">Annonce 2/2</h3>
+<ul>
+<li>Introduire la société</li>
+<li>L&#39;équipe</li>
+<li>Les produits/services: métier, ce qu&#39;il résout, sa stack technique...</li>
+<li>Infrastructure</li>
+<li>Pratique de l&#39;équipe: la mise en prod, la qualité, les tests, codes reviews...</li>
+<li>Profil du candidat, ce que vous recherchez</li>
+</ul>
+<p>Exemple: <a href="https://www.welcometothejungle.co/companies/iwd/jobs/developpeu-r-se-web-experimente_paris">Dev senior</a> et <a href="https://www.welcometothejungle.co/companies/iwd/jobs/senior-ops_paris">Ops</a></p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-7">
+    <section class="slide-content"><h3 id="sourcing">Sourcing</h3>
+<p>Comment trouver les candidats?</p>
+<ul>
+<li>Poster une annonce sur un jobboard type remixjob, selon les communautés (~200€)</li>
+<li>Plateforme &quot;de communication&quot; type <a href="https://www.welcometothejungle.co">Welcome to the jungle</a>, <a href="https://www.jobteaser.com">Jobteaser</a>  (~300€/mois)</li>
+<li>Plateforme qui &quot;qualifie&quot; les candidats, type <a href="https://www.talent.io">Talen.io</a>, <a href="https://hired.com">Hired</a>, <a href="https://bluecoders.io">bluecoders.io</a> (~15% salaire brut annuel)</li>
+<li>Recruteur (&gt;15% salaire brut annuel)</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-8">
+    <section class="slide-content"><h3 id="1er-contact-par-email">1er contact par email</h3>
+<p>Phase d&#39;accroche, de séduction 💕</p>
+<ul>
+<li>Lien vers une vidéo (privée) de présentation de l&#39;équipe, des produits...</li>
+<li>Quelques liens supplémentaires vers le site, Welcome to the jungle...</li>
+<li>Expliquer le processus de recrutement</li>
+<li>Soliciter une vidéo conf</li>
+<li>PS: remote, salaire, langue parlée...</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-9">
+    <section class="slide-content"><h3 id="video-conf-rence-1-2">Video conférence 1/2</h3>
+<blockquote>
+<p>&quot;La première impression est toujours la bonne&quot;  </p>
+</blockquote>
+<ul>
+<li>On ne représente pas la contexte, la vidéo l&#39;a déjà fait</li>
+<li>On essaie de le faire rebondir par rapport au contenu: test, code review, continuous delivery...</li>
+<li><code>Que pourriez-vous proposer pour améliorer/aider l’équipe (process, outils...)</code></li>
+<li>L&#39;ammener à parler de sa dernière expérience: <code>Qu&#39;est ce que vous aimez dans votre job actuel?</code></li>
+<li>Et la question en creux <code>Ce qui vous plaît moins?</code></li>
+<li><code>Pourquoi voulez-vous travailler chez nous?</code></li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-10">
+    <section class="slide-content"><h3 id="video-conf-rence-2-2">Video conférence 2/2</h3>
+<p>Questions &quot;techniques&quot;:</p>
+<ul>
+<li>Comment organisez-vous votre veille tech?</li>
+<li>Quel est le dernier gros challenge technique auquel vous avez dû faire face?</li>
+<li>Qu’est qui fait qu’un code est bon?</li>
+<li>A quoi sert une Interface en POO?</li>
+<li>De quoi est composée une requête HTTP</li>
+<li>Comment gardez-vous une vision claire de votre prod backend?</li>
+<li>Vous avez une grosse charge sur l’un de vos services. Comment faîtes-vous pour la gérer?</li>
+<li>Avantage/inconvénient de la techno</li>
+<li>Une/Deux question spécifique au language</li>
+<li>Questions sur l&#39;ecosystem, les bonnes pratiques...</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-11">
+    <section class="slide-content"><h3 id="arr-t-du-processus-">Arrêt du processus 😩</h3>
+<p>Si c&#39;est le candidat qui arrête, répondre de manière positive &quot;bonne chance pour ton nouveau job&quot;... On ne sait jamais, on se recroisera peut-être. Ne pas oublier de le sourcer.</p>
+<p>Si c&#39;est vous, restez formel mais toujorus positif. Si après votre refus le candidat vous demande pourquoi, soyez franc et direct, c&#39;est le meilleur service que vous pouvez lui rendre.</p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-12">
+    <section class="slide-content"><h3 id="challenge-technique-1-2">Challenge technique 1/2</h3>
+<ul>
+<li>Fait à la maison</li>
+<li>Définir une deadline avec le candidat (15j s&#39;il le faut)</li>
+<li>L&#39;exercice doit être décrit avec précision</li>
+<li>Les objectifs de l&#39;exercice doivent être claire</li>
+<li>Rapide à faire ~2h, 3h max</li>
+<li>Partir d&#39;une vrai problématique métier</li>
+</ul>
+<p>Example: <a href="https://github.com/iwonderanddev/tech-challenges">Challenge IWD</a></p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-13">
+    <section class="slide-content"><h3 id="challenge-technique-2-2">Challenge technique 2/2</h3>
+<p>Ce qu&#39;on cherche à voir:</p>
+<ul>
+<li>Le métier doit émerger dans le code</li>
+<li>Le découplage entre les class</li>
+<li>Les tests</li>
+<li>La maintenabilité du code sur le long terme</li>
+<li>Best practice: SOLID, KISS, YAGNI</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-14">
+    <section class="slide-content"><h3 id="rencontre-paris">Rencontre à Paris</h3>
+<blockquote>
+<p>Dans 90% on a très envie de recruter le candidat</p>
+</blockquote>
+<ul>
+<li>Visite des locaux</li>
+<li>Présentation des équipes sales 👯, client 🙆, dev 🚀...</li>
+<li>Répondre aux dernières interrogations</li>
+<li>Echanger avec des membres de l&#39;équipe dev</li>
+<li>Proposition formelle dans la foulée par mail</li>
+</ul>
+<blockquote>
+<p>Si non Francilien, rembourse le billet de TGV</p>
+</blockquote>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-15">
+    <section class="slide-content"><h3 id="yeah-mother-fucker-">Yeah mother fucker 😁 🙌 ✌ 🚀 🌈 🎉 🎊</h3>
+<p>Le plus dure est fait.</p>
+<p>Il faut rapidement que la proposition d&#39;embauche lui parvienne, puis le contrat pour sécuriser l&#39;embauche.</p>
+<p>Préparer le onboarding et les 2 premières semaines: formations, setup, doc...</p>
+<p>Préparer une US qu&#39;il attaquera au bout de max 3j.</p>
+<p>Si remote, prévoir l&#39;hébergement pour le premier mois sur Paris (3j/semaines)</p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-16">
+    <section class="slide-content"><h3 id="suivi-1-2">Suivi 1/2</h3>
+<p><img src="assets/kanban.jpg" alt="Suivi"></p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-17">
+    <section class="slide-content"><h3 id="suivi-1-2">Suivi 1/2</h3>
+<p>Kanban:</p>
+<ul>
+<li>NEW CANDIDATE</li>
+<li>QUICK VIDEO CONF</li>
+<li>CHALLENGE</li>
+<li>CODE REVIEW</li>
+<li>MEETING PARIS</li>
+<li>PROPOSALS</li>
+</ul>
+<p>Classification:</p>
+<ul>
+<li>Type de job / &quot;séniorité&quot;</li>
+<li>Source du recrutement: spontanée, talent.io, remixjob...</li>
+<li>Sourcing: pour tagger les candidats à re-contacter dans le futur</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-18">
+    <section class="slide-content"><h3 id="bilan">Bilan</h3>
+<p>Sur la dernière années:</p>
+<ul>
+<li>5 recrutements</li>
+<li>Actuelement 12 candidats dans le pipe pour 3 postes</li>
+<li>~70 candidats rencontrés, au moins en vidéo conférence</li>
+<li>~20 challenges techique</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-19">
+    <section class="slide-content"><h3 id="t-moignage-damien-pobel">Témoignage Damien Pobel</h3>
+<blockquote>
+<p>Lead developer à Lyon, il est notre dernière recrue<br>🙏 ajouter le sur twitter sinon je dois retirer cette slide <a href="https://twitter.com/dpobel">@dpobel</a></p>
+</blockquote>
+<p>Qu&#39;est-ce qui t&#39;as donner envie de répondre à ma solicition sur talen.io?</p>
+<p>Le process de recrutement était claire. Le fait que ça se passe sur talent.io, la relation est un peu inversée et donc à priori si on est contacté ce que ça paraît coller côté recruteur.<br>La vidéo exprimait bien le contexte du job, de l&#39;équipe et de la société.</p>
+<p>Qu&#39;est-ce qui a fait que tu nous as dis oui 💒?</p>
+<ul>
+<li>le bon contact avec toi (il veut déjà une augmentation 😄) et l’équipe</li>
+<li>prétention salariale OK sans discussion</li>
+<li>le challenge technique qui pose des questions pertinentes et qui m’ont permis d’avoir un bon aperçu de où j’allais</li>
+<li>l’aspect remote tout en ayant un collègue à Lyon, le meilleur des 2 mondes en gros 🎉</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-20">
+    <section class="slide-content"><h1 id="merci">Merci</h1>
+<p><br/>
+Relecture, critiques, pull requests 😉<br><a href="https://twitter.com/dpobel">@dpobel</a><br><a href="https://twitter.com/mbagur">@mbagur</a><br><a href="https://twitter.com/mikael_letang">@mikael_letang</a></p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-21">
     <section class="slide-content"><h1 id="questions-">Questions?</h1>
 </section>
   </div>
-  <div class="slide hidden author-slide" id="slide-5">
+  <div class="slide hidden author-slide" id="slide-22">
     <section class="slide-content"><div class="author">
   <h1 class="name">Fabien Furet</h1>
     <h3 class="twitter">
