--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 				margin-left: auto;
 				margin-right: auto;
-				max-width: 600px;
+				max-width: 700px;
 				padding-left:1em;
 				padding-right:1em;
 			}
 			h1 {
 				font-family: 'Cardo', serif;
 				font-size: 2.5em;
-				color:#47a9ff;
+				color:#0a8bfd;
 				margin-bottom: 40px;
 			}
 			h2 {
@@ -35,7 +35,7 @@
 				padding-bottom:10px;
 			}
 			a {
-				color:#47a9ff;
+				color:#0a8bfd;
 			}
 
 			.links {
@@ -74,30 +74,30 @@
 					font-size: 0.8em;
 				}
 				.tag-level-4 {
-					background-color: #4dacff;
+					background-color: #5cb0f9;
 					font-size: 0.9em;
 				}
 				.tag-level-5 {
-					background-color: #3a9bf0;
+					background-color: #0a8bfd;
 					font-size: 1em;
 				}
 		</style>
 	</head>
 	<body>
-		<!--[if lt IE 7]>
+		<!--[if lt IE 11]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 		<div class="main">
 			<h1 itemscope="" itemtype="http://data-vocabulary.org/Person"><span itemprop="name">Fabien Furet</span> <span class="aka">aka RETFU</span></h1>
-			<h2>Développeur web</h2>
+			<h2>Développeur web 🚀</h2>
 			<p>
-				Cela fait plus de 10 ans que j'évolue dans le milieu du web en backend et frontend.
+				Cela fait plus de 15 ans que j'évolue dans le milieu du web en backend et frontend.
 			</p>
 			<p>
-				Je suis actuellement Directeur technique chez <a href="http://iwd.io">IWD</a> où j'aide l'équipe dev à produire des livrables de qualités dans les temps.
+				Je suis CTO chez <a href="http://iwd.io">IWD</a> et j'assise l'équipe dev à produire des livrables de qualités, dans les temps et maintenable.
 			</p>
 			<p>
-				<span class="tag tag-level-5">css</span> <span class="tag tag-level-5">composer</span> <span class="tag tag-level-4">app cache</span> <span class="tag tag-level-2">python</span> <span class="tag tag-level-2">pouchdb</span> <span class="tag tag-level-3">reactjs</span> <span class="tag tag-level-5">sass</span> <span class="tag tag-level-4">indexeddb</span> <span class="tag tag-level-4">raml</span> <span class="tag tag-level-2">couchdb</span> <span class="tag tag-level-2">jenkins</span> <span class="tag tag-level-4">apache</span> <span class="tag tag-level-3">nodejs</span> <span class="tag tag-level-3">gulp</span> <span class="tag tag-level-2">nginx</span> <span class="tag tag-level-3">browserify</span> <span class="tag tag-level-2">webpack</span> <span class="tag tag-level-2">json schema</span> <span class="tag tag-level-3">api soap</span> <span class="tag tag-level-5">http</span> <span class="tag tag-level-5">html5</span> <span class="tag tag-level-2">redis</span> <span class="tag tag-level-4">compass</span> <span class="tag tag-level-3">npm</span> <span class="tag tag-level-2">express</span> <span class="tag tag-level-2">cordova</span> <span class="tag tag-level-3">reflux</span> <span class="tag tag-level-4">mysql</span> <span class="tag tag-level-3">memcache</span> <span class="tag tag-level-5">javascript</span> <span class="tag tag-level-2">aws</span> <span class="tag tag-level-1">nagios</span> <span class="tag tag-level-5">php</span> <span class="tag tag-level-5">as3</span> <span class="tag tag-level-4">flash media server</span> <span class="tag tag-level-5">api rest</span>
+				<span class="tag tag-level-5">html5</span> <span class="tag tag-level-3">redux</span> <span class="tag tag-level-4">leadership</span> <span class="tag tag-level-4">raml</span> <span class="tag tag-level-2">nginx</span> <span class="tag tag-level-5">as3</span> <span class="tag tag-level-2">cordova</span> <span class="tag tag-level-4">fms</span> <span class="tag tag-level-5">json schema</span> <span class="tag tag-level-5">continuous delivery</span> <span class="tag tag-level-5">css</span> <span class="tag tag-level-3">webpack</span> <span class="tag tag-level-5">unit test</span> <span class="tag tag-level-5">api rest</span> <span class="tag tag-level-5">continuous integration</span> <span class="tag tag-level-4">mysql</span> <span class="tag tag-level-3">yarn</span> <span class="tag tag-level-5">maintainability</span> <span class="tag tag-level-5">loose coupling</span> <span class="tag tag-level-5">php</span> <span class="tag tag-level-3">nodejs</span> <span class="tag tag-level-5">solid</span> <span class="tag tag-level-4">management</span> <span class="tag tag-level-2">couchdb</span> <span class="tag tag-level-5">dependency injection</span> <span class="tag tag-level-4">composer</span> <span class="tag tag-level-4">reactjs</span> <span class="tag tag-level-2">python</span> <span class="tag tag-level-4">indexeddb</span> <span class="tag tag-level-4">consistency</span> <span class="tag tag-level-5">interface</span> <span class="tag tag-level-4">apache</span> <span class="tag tag-level-2">jenkins</span> <span class="tag tag-level-1">nagios</span> <span class="tag tag-level-3">service worker</span> <span class="tag tag-level-2">gitlab</span> <span class="tag tag-level-5">http</span> <span class="tag tag-level-5">contract</span> <span class="tag tag-level-4">saas</span> <span class="tag tag-level-3">redis</span> <span class="tag tag-level-5">javascript</span> <span class="tag tag-level-5">mentoring</span> <span class="tag tag-level-2">pouchdb</span> <span class="tag tag-level-5">code review</span>
 			</p>
 			<br/>
 			<h2>Talk</h2>
@@ -109,7 +109,7 @@
 				Lighting talk sur mon retour d'expérience après 3 mois de standing desk.
 			</p>
 			<p class="links">
-				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twitter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a> - <a href="http://blogmarks.net/user/RETFU">Blogmarks</a>
+				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twitter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a>
 			</p>
 		</div>
 		<script>
